# poker

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: main.rs
poker/: Cargo.toml
poker-slint/: .gitignore  Cargo.toml
poker-slint/src/: main.rs
poker-slint/ui/: app.slint
poker-web/poker-client/: .gitignore  Cargo.toml  Dioxus.toml  index.html  package.json  tailwind.config.js
poker-web/poker-client/public/assets/uno/: uno.config.js
poker-web/poker-client/src/: main.rs
poker-web/poker-client/src/components/: content.rs  footer.rs  mod.rs
poker-web/poker-client/src/hooks/: markdown.rs  mod.rs  mode.rs
poker-web/poker-client/src/markdown/: readme.md
poker-web/poker-client/src/pages/: cards.rs  history.rs  mod.rs  starter.rs
poker-web/poker-server/: Cargo.toml
poker-web/poker-server/src/: config.rs  main.rs  web.rs
poker-web/poker-server/src/web/: mod.rs
poker/src/: action.rs  card.rs  error.rs  game.rs  hand.rs  lib.rs
poker/tests/: test.rs
poker_cli/: Cargo.toml
poker_cli/src/: main.rs
poker_egui/: Cargo.toml
poker_egui/src/: main.rs
src/: card.rs  lib.rs  main.rs  poker.rs
tests/: test.rs
