[package]
name = "dioxus-starter"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "*" }
dioxus-router = { version = "*" }
dioxus-web = { version = "*" }
indextree = "*"
log = "*"
poker = { path = "../../poker" }
wasm-logger = "*"
