[package]
name = "poker-client"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "*" }
dioxus-router = { version = "*" }
indextree = "*"
log = "*"
poker = { path = "../../poker" }
wasm-logger = "*"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus-desktop = { version = "*" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus-web = { version = "*" }

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]