[package]
name = "poker-client"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "^0.4" }
dioxus-router = { version = "^0.4" }
indextree = "*"
log = "*"
poker = { path = "../../poker" }
wasm-logger = "*"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus-desktop = { version = "^0.4" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus-web = { version = "^0.4" }

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]